# zeiterfassung2

./: .env.sample  .gitignore  Cargo.toml  Rocket.dist.toml  justfile  resin.toml  rustfmt.toml
.github/workflows/: commit.yml
backend/: Cargo.toml
backend/src/: catchers.rs  db.rs  error.rs  guard.rs  lib.rs  main.rs  schema.rs  test.rs  tests.rs  tracing.rs
backend/src/auth/: tokenizer.rs
backend/src/db/: activity.rs  client.rs  helper.rs  mod.rs  project.rs  tracking.rs  tracking_to_activity.rs  user.rs
backend/src/db/tracking/: middlelayer.rs  mod.rs  tracking.rs  tracking_to_activity.rs
backend/src/models/: activity.rs  client.rs  mod.rs  project.rs  tracking.rs  tracking_to_activity.rs  user.rs
backend/src/models/activity/: generated.rs
backend/src/models/client/: generated.rs
backend/src/models/project/: generated.rs
backend/src/models/tracking/: generated.rs
backend/src/models/tracking_to_activity/: generated.rs
backend/src/models/user/: generated.rs
backend/src/routes/: activity.rs  client.rs  login.rs  mod.rs  project.rs  tracking.rs  user.rs
backend/src/test/: db.rs  gen_fns.rs  methods.rs  mod.rs  token.rs
frontend/: biome.json  index.html  justfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: auth.tsx  main.css  main.tsx
frontend/src/components/tw/: nav.tsx
frontend/src/components/ui/: form.tsx  input.tsx
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx
frontend/src/services/: auth.service.ts
migrations/2023-11-29-231121_user/: up.sql
migrations/2023-11-29-231317_client/: up.sql
migrations/2023-11-29-231509_project/: up.sql
migrations/2023-11-29-231832_activity/: up.sql
migrations/2023-11-29-232550_tracking/: down.sql  up.sql
migrations/2023-11-29-233805_tracking_to_activity/: down.sql  up.sql
migrations/2023-12-17-164202_admin_user/: down.sql  up.sql
