[package]
name = "zeiterfassung-backend"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Failpark/zeiterfassung2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono", "mysql"] }
diesel_migrations = "2.1.0"
jwt-simple = "0.11.9"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.1.0", features = ["diesel_mysql"] }
serde = "1.0.193"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "json"] }
tracing-test = "0.2.4"
typeshare = "1.0.1"

[dev-dependencies]
fake = { version = "2.9.1", features = ["derive", "chrono"]}
pretty_assertions = "1.4.0"
rand = "0.8.5"
test-case = "3.3.1"
diesel = { version = "2.1.4", features = ["chrono", "mysql", "r2d2"] }
paste = "1.0.14"
itertools = "0.12.1"
